# VisionSub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cli.yml  docs.yml  release.yml
.learnings/: 2026-04-11-架构升级与UI优化.md
cli/: package.json
docs/: architecture.md  getting-started.md  index.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  main_cli.rs
src-tauri/src/commands/: export.rs  file.rs  mod.rs  ocr.rs  ocr_engine.rs  scene.rs  system.rs  utils.rs  video.rs
src-tauri/tests/: unit_tests.rs
src/assets/styles/: _mixins.scss  _variables.scss  global.scss
src/components/: index.ts
src/components/common/: AboutDialog.vue  Button.vue  KeyboardShortcutsHelp.vue  Modal.vue  Tooltip.vue
src/components/layout/: BatchProcessView.vue  SettingsView.vue  SidePanel.vue  StatusBar.vue  ToolBar.vue  VideoPreview.vue
src/components/subtitle/: ExportDialog.vue  SubtitleList.vue
src/composables/: index.ts  useBatchProcessor.ts  useImagePreprocessor.ts  useKeyboardShortcuts.ts  useOCREngine.ts  useProgressTab.ts  useROITab.ts  useSettingsTab.ts  useSubtitleExtractor.ts  useSubtitleList.ts  useSystemCheck.ts  useVideoMetadata.ts  useVideoPlayer.ts
src/core/: SubtitlePipeline.test.ts
src/stores/: index.ts  project.ts  settings.ts  subtitle.ts
src/types/: index.ts  subtitle.test.ts  subtitle.ts  video.ts
(+6 files in other folders)
