[package]
name = "hardsubx"
version = "3.2.0"
description = "Professional Video OCR Subtitle Extraction Tool"
authors = ["Agions"]
license = "MIT"
repository = "https://github.com/Agions/HardSubX"
edition = "2021"
default-run = "hardsubx-cli"

[lib]
name = "hardsubx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[bin]]
name = "hardsubx-cli"
path = "src/main_cli.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
chrono = "0.4"
image = "0.25"  # For image processing in OCR

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
